log
Wed 15 May 2024 07:03:19 PM UTC: 
 tests:  0|5
total_score: 0/70
5661973
Wed 15 May 2024 07:08:27 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  2|4
total_score: 15/70
cc21ddd
Wed 15 May 2024 07:26:57 PM UTC: 
 sudoku.c | 81 +++++++++++++++++++++++++++++++++++++++++++++++++++-------------
 1 file changed, 65 insertions(+), 16 deletions(-)
 tests:  0|5
total_score: 0/70
b873e6d
Wed 15 May 2024 07:28:04 PM UTC: 
 sudoku.c | 33 ++++++++++++++++++++++-----------
 1 file changed, 22 insertions(+), 11 deletions(-)
 tests:  0|5
total_score: 0/70
20ba37f
Wed 15 May 2024 07:30:13 PM UTC: 
 sudoku.c | 37 +++++++++++++++++++++++++++----------
 1 file changed, 27 insertions(+), 10 deletions(-)
 tests:  2|4
total_score: 15/70
e7ecd6b
Wed 15 May 2024 07:34:10 PM UTC: 
 sudoku.c | 48 +++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 47 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
ebd8dad
Wed 15 May 2024 07:38:47 PM UTC: 
 sudoku.c | 39 ++++++++++++++-------------------------
 1 file changed, 14 insertions(+), 25 deletions(-)
 tests:  2|4
total_score: 15/70
a98c791
Wed 15 May 2024 07:39:46 PM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
44b7338
Wed 15 May 2024 07:41:58 PM UTC: 
 sudoku.c | 84 ++++++++--------------------------------------------------------
 1 file changed, 10 insertions(+), 74 deletions(-)
 tests:  5|3
total_score: 35/70
84cee16
Wed 15 May 2024 07:44:55 PM UTC: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
600ebde
Wed 15 May 2024 07:45:16 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
758dc45
Wed 15 May 2024 07:46:08 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
b4c728d
Wed 15 May 2024 07:48:14 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:147:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  147 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
c2df8f3
Wed 15 May 2024 07:48:34 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
bd71d8c
Wed 15 May 2024 07:50:42 PM UTC: 
 sudoku.c | 36 ++++++++++++++++++++++++------------
 1 file changed, 24 insertions(+), 12 deletions(-)
 tests:  6|2
total_score: 45/70
e699a5a
